# synth

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  filter.rs  lib.rs  main.rs  oscillator.rs
